fixed e-commerce overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -142,7 +142,7 @@
 	
 }
 .service {
-	padding: 3.5rem 2rem;
+	padding: 3.5rem 1.5rem;
 	text-align: center;
 	h2 {
 		padding-bottom: .5rem;
